k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-alb-ingress
  namespace: test-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
           - path: /
             pathType: Prefix
             backend:
              service:
               name: netflix-app
               port:
                number: 3000

          #- path: /
           # pathType: Prefix
            #backend:
             # service:
              #  name: reddit-clone-service
               # port:
                #  number: 3000
